<resources>
    <string name="app_name">HummFinder App</string>
    <string name="area_title">area_title</string>
    <string name="image1">image1</string>
    <string name="area_1">area_1</string>
    <string name="helloworldhelloworldhelloworldhelloworldhelloworldhelloworld">helloworldhelloworldhelloworldhelloworldhelloworldhelloworld</string>
    <string name="image2">image2</string>
    <string name="area_2">area_2</string>
    <string name="image3">image3</string>
    <string name="area_3">area_3</string>
    <string name="image4">image4</string>
    <string name="area_4">area_4</string>
    <string name="info">info</string>
    <string name="sometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometext">SomeTextSomeTextSomeTextSomeTextSomeTextSomeTextSomeTextSomeText</string>
    <string name="links">links</string>
    <string name="tinnitus_matching">Tinnitus Matching</string>
    <string name="sometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometext">sometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometext</string>
    <string name="calibration">Calibration</string>
    <string name="plusbutton">plusbutton</string>
    <string name="mutebutton">mutebutton</string>
    <string name="minusbutton">minusbutton</string>
    <string name="matminus">matMinus</string>
    <string name="matplus">matPlus</string>
</resources>