<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchingActivity">


    <TextView
        android:id="@+id/matchingActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinnitus_matching"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/titleTextSize"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometext"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/matchingActivityTitle" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="@dimen/matButtonDimensions"
        android:layout_height="@dimen/matButtonDimensions"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/matminus"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        app:srcCompat="@drawable/ic_baseline_remove_circle_outline_24" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="@dimen/matButtonDimensions"
        android:layout_height="@dimen/matButtonDimensions"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/matplus"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@+id/seekBar"
        app:srcCompat="@drawable/ic_baseline_add_circle_outline_24" />
</androidx.constraintlayout.widget.ConstraintLayout>