<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalibrationActivity">

    <TextView
        android:id="@+id/calibrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibration"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/calibrationmockView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.MockView
        android:id="@+id/calibrationmockView"
        android:layout_width="0dp"
        android:layout_height="@dimen/calMockViewHeight"
        app:layout_constraintBottom_toTopOf="@+id/calSeekBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/calibrationTitle" />


    <ImageButton
        android:id="@+id/calPlusButton"
        android:layout_width="@dimen/calButtonDimensions"
        android:layout_height="@dimen/calButtonDimensions"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/plusbutton"
        app:layout_constraintBottom_toBottomOf="@+id/calSeekBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/calSeekBar"
        app:layout_constraintTop_toTopOf="@+id/calSeekBar"
        app:srcCompat="@drawable/ic_baseline_add_circle_outline_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <SeekBar
        android:id="@+id/calSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/calMuteButton"
        app:layout_constraintEnd_toStartOf="@+id/calPlusButton"
        app:layout_constraintStart_toEndOf="@+id/calMinusButton"
        app:layout_constraintTop_toBottomOf="@+id/calibrationmockView" />


    <ImageButton
        android:id="@+id/calMinusButton"
        android:layout_width="@dimen/calButtonDimensions"
        android:layout_height="@dimen/calButtonDimensions"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/minusbutton"
        app:layout_constraintBottom_toBottomOf="@+id/calSeekBar"
        app:layout_constraintEnd_toStartOf="@+id/calSeekBar"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/calSeekBar"
        app:srcCompat="@drawable/ic_baseline_remove_circle_outline_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/calMuteButton"
        android:layout_width="@dimen/calButtonDimensions"
        android:layout_height="@dimen/calButtonDimensions"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/calSeekBar"
        app:srcCompat="@android:drawable/stat_notify_call_mute"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/mutebutton"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>