<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/infoActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/titleTextSize"
        app:layout_constraintBottom_toTopOf="@+id/infoActivityDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.MockView
        android:id="@+id/infoActivityVideo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/infoActivityDescription" />

    <TextView
        android:id="@+id/infoActivityDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometextsometext"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/infoActivityVideo"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/infoActivityTitle" />

    <TextView
        android:id="@+id/infoActivityLinkTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/links"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/infoLink1"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <TextView
        android:id="@+id/infoLink1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autoLink="web"
        android:text="http://www.google.com"
        app:layout_constraintBottom_toTopOf="@+id/infoLink2"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toEndOf="@+id/infoLinkBullet1"
        app:layout_constraintTop_toBottomOf="@+id/infoActivityLinkTitle"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/infoLinkBullet1"
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/infoLink1"
        app:layout_constraintEnd_toStartOf="@+id/infoLink1"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/infoLink1"
        app:srcCompat="@drawable/ic_baseline_brightness_1_24" />

    <ImageView
        android:id="@+id/infoLinkBullet2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/infoLink2"
        app:layout_constraintEnd_toStartOf="@+id/infoLink2"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/infoLink2"
        app:srcCompat="@drawable/ic_baseline_brightness_1_24" />

    <TextView
        android:id="@+id/infoLink2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autoLink="web"
        android:text="http://www.google.com"
        app:layout_constraintBottom_toTopOf="@+id/infoLink3"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toEndOf="@+id/infoLinkBullet2"
        app:layout_constraintTop_toBottomOf="@+id/infoLink1"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/infoLink3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autoLink="web"
        android:text="http://www.google.com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toEndOf="@+id/infoLinkBullet3"
        app:layout_constraintTop_toBottomOf="@+id/infoLink2"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/infoLinkBullet3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/infoLink3"
        app:layout_constraintEnd_toStartOf="@+id/infoLink3"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/infoLink3"
        app:srcCompat="@drawable/ic_baseline_brightness_1_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

</androidx.constraintlayout.widget.ConstraintLayout>